fix result unreadable for colourblind

--- a/assets/styles/large_style.css
+++ b/assets/styles/large_style.css
@@ -90,6 +90,23 @@ p {
 
 }
 
+/* Results Display */
+
+#results {
+	display: grid;
+	grid-template-rows: repeat(3, 65px);
+	grid-template-columns: repeat(5, 50px);
+	place-content: center;
+	place-items: center;
+
+	.fa-check {
+		color: #238636;
+	}
+	.fa-xmark {
+		color: #da3633;
+	}
+}
+
 /* TABLE */
 
 table {
