--- a/assets/styles/mobile_style.css
+++ b/assets/styles/mobile_style.css
@@ -107,6 +107,23 @@ td {
 
 }
 
+/* Results Display */
+
+#results {
+	display: grid;
+	grid-template-rows: repeat(3, 65px);
+	grid-template-columns: repeat(5, 50px);
+	place-content: center;
+	place-items: center;
+}
+
+.fa-check {
+	color: #238636;
+}
+.fa-xmark {
+	color: #da3633;
+}
+
 /* TEXT DECORATIION */
 
 .error {
